
And constructed with the following guidelines:

* Breaking backward compatibility bumps the major (and resets the minor
  and patch)
* New additions without breaking backward compatibility bumps the minor
  (and resets the patch)
* Bug fixes and misc changes bumps the patch



lexicon 0.5.0 -
----------------------------------------------------------------

BUG FIXES

NEW FEATURES

* `sw_mallete`, `sw_jockers`, `sw_python` and `sw_lucene` stopword lists added.

* `hash_sentiment_senticnet` `hash_sentiment_vadar` & `hash_sentiment_inquirer`
  sentiment hash tables added for use in the **sentimentr** package.

MINOR FEATURES

IMPROVEMENTS

CHANGES

*  The word "incredibly" was removed from `hash_sentiment_jockers`,
  `hash_sentiment_huliu`, & `hash_sentiment_sentiword` and added as an amplifier
  to `hash_valence_shifters`.  Spotted by AbdulMajedRaja:
  https://github.com/trinker/sentimentr/issues/58#issuecomment-343373693



lexicon 0.4.0 - 0.4.1
----------------------------------------------------------------

BUG FIXES

* `function_words` contained duplicates that have been been removed.

* `hash_lemmas` contained an erroneous token-lemma pair (also-conjurer).  This
  was spotted by Mitchell Linegar (see https://github.com/trinker/textstem/issues/5).
  The token `also` has been removed from the dictionary.


NEW FEATURES

* `pos_df_irregular_nouns` and `pos_unchanging_nouns` added.  The former is a
  data.frame of singular and plural forms of irregular nouns.  The latter is
  a simple list of irregular nouns that have the same singular and plural forms.

* `profanity_alvarez`, `profanity_arr_bad`, `profanity_banned`,
  `profanity_google`, & `profanity_von_ahn` added to give access to profanity
  word lists.



lexicon 0.3.0 - 0.3.1
----------------------------------------------------------------

BUG FIXES

* `freq_first_names` and `freq_last_names` were just a string of the data set
  name.  This has been updated with the actual data set.


NEW FEATURES
