@@ -1,0 +1,18 @@
+#' Loughran-McDonald Constraining Words
+#'
+#' A dataset containing a character vector of Loughran & McDonald's (2016)
+#' constraining words list.
+#'
+#' @docType data
+#' @keywords datasets
+#' @name constraining_loughran_mcdonald
+#' @usage data(constraining_loughran_mcdonald)
+#' @format A character vector with 184 elements
+#' @references Loughran, T. and McDonald, B. (2016). Textual analysis in
+#' accounting and finance: A survey. Journal of Accounting Research 54(4),
+#' 1187-1230. doi: 10.2139/ssrn.2504147 \cr \cr
+#' \url{https://sraf.nd.edu/textual-analysis/resources/#Master\%20Dictionary}
+NULL
+
+
+
