@@ -1,0 +1,21 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/sw_loughran_mcdonald.R
+\docType{data}
+\name{sw_loughran_mcdonald_short}
+\alias{sw_loughran_mcdonald_short}
+\title{Loughran-McDonald Short Stopword List}
+\format{A character vector with 121 elements}
+\usage{
+data(sw_loughran_mcdonald_short)
+}
+\description{
+A dataset containing a character vector of Loughran & McDonald's (2016)
+short stopword list.
+}
+\references{
+Loughran, T. and McDonald, B. (2016). Textual analysis in
+accounting and finance: A survey. Journal of Accounting Research 54(4),
+1187-1230. doi: 10.2139/ssrn.2504147 \cr \cr
+\url{https://sraf.nd.edu/textual-analysis/resources/#Master\%20Dictionary}
+}
+\keyword{datasets}
